--- a/.github/workflows/ascii.yaml
+++ b/.github/workflows/ascii.yaml
@@ -14,7 +14,7 @@ jobs:
               run: sudo apt-get install cowsay -y
 
             - name: Run Cowsay
-              run: cowsay -f dragon "Draa Draa Dragoonnn" >> dragon.txt
+              run: cowsay -f dragon "Ak THE RED DRAAAAGGGGOOOOONNN" >> dragon.txt
 
             - name: Test File
               run: grep -i "dra" dragon.txt
