--- a/.github/workflows/ascii.yaml
+++ b/.github/workflows/ascii.yaml
@@ -14,5 +14,5 @@ jobs:
               run: ls -la
 
             - name: Execute Script
-              uses: ./script.sh
+              run: ./script.sh
 
