--- a/.github/workflows/ascii.yaml
+++ b/.github/workflows/ascii.yaml
@@ -14,5 +14,7 @@ jobs:
               run: ls -la
 
             - name: Execute Script
-              run: ./script.sh
+              run: |
+                chmod +x script.sh
+                ./script.sh
 
