--- a/.github/workflows/ascii.yaml
+++ b/.github/workflows/ascii.yaml
@@ -4,7 +4,7 @@ on:
     push
 
 jobs:
-    ascii-job:
+    test-job-1:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -17,4 +17,17 @@ jobs:
               run: |
                 chmod +x script.sh
                 ./script.sh
+
+    test-job-2:
+        runs-on: ubuntu-latest
+        steps:
+          - name: sleep for 10 seconds
+            run: sleep 10
+        
+    test-job-3:
+        runs-on: ubuntu-latest
+        steps: 
+          - name: CAT
+            run: cat dragon.txt
+
 
