--- a/.github/workflows/ascii.yaml
+++ b/.github/workflows/ascii.yaml
@@ -19,12 +19,14 @@ jobs:
                 ./script.sh
 
     test-job-2:
+        needs: test-job-1
         runs-on: ubuntu-latest
         steps:
           - name: sleep for 10 seconds
             run: sleep 10
         
     test-job-3:
+        needs: test-job-2
         runs-on: ubuntu-latest
         steps: 
           - name: CAT
