--- a/.github/workflows/ascii.yaml
+++ b/.github/workflows/ascii.yaml
@@ -4,32 +4,40 @@ on:
     push
 
 jobs:
-    test-job-1:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
+    job-1:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Install Cowsay
+          run: sudo apt-get install cowsay -y
 
-            - name: List Files
-              run: ls -la
+        - name: Execute Cowsay
+          run: cowsay -f dragon "AK THE RED DRAAAAGGGGOOOOONNN" >> dragon.txt
 
-            - name: Execute Script
-              run: |
-                chmod +x script.sh
-                ./script.sh
+        - name: Upload Dragon File 
+          uses: actions/upload-artifact@v3
+          with:
+            name: dragon-txt-file
+            path: dragon.txt
 
     test-job-2:
-        needs: test-job-1
+        needs: job-1
         runs-on: ubuntu-latest
         steps:
-          - name: sleep for 10 seconds
-            run: sleep 10
+        - name: Download Dragon File 
+          uses: actions/download-artifact@v3
+          with:
+            name: dragon-txt-file
         
     test-job-3:
         needs: test-job-2
         runs-on: ubuntu-latest
         steps: 
-          - name: CAT
-            run: cat dragon.txt
+        - name: Download Dragon File 
+          uses: actions/download-artifact@v3
+          with:
+            name: dragon-txt-file          
+          
+        - name: CAT
+          run: cat dragon.txt
 
 
