--- a/.github/workflows/ascii.yaml
+++ b/.github/workflows/ascii.yaml
@@ -17,7 +17,7 @@ jobs:
           uses: actions/upload-artifact@v4
           with:
             name: dragon-txt-file
-            path: dragon.txt
+            path: dragonn.txt
 
     test-job-2:
         needs: job-1
