--- a/.github/workflows/first-example.yaml
+++ b/.github/workflows/first-example.yaml
@@ -11,7 +11,7 @@ jobs:
 
     - name: List and Read File
       run: |
-        echo "Github Actions - Redo"
+        echo "Github Actions - Redo Again"
         ls -la
         cat README.md 
 
