--- a/.github/workflows/first-example.yaml
+++ b/.github/workflows/first-example.yaml
@@ -1,19 +1,27 @@
-name: My-WorkFlow
+name: Exploring Secrets 
 
 on: push 
 
+env:
+  CONTAINER_REGISTRY: docker.io
+  IMAGE_NAME: TEST 
+
 jobs:
-  first_job:
-    runs-on: ubuntu:latest
+  docker:
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v4
+    - name: Docker Build 
+      run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest 
 
-    - name: List and Read File
-      run: |
-        echo "Github Actions - Redo Again"
-        ls -la
-        cat README.md 
+    - name: Docker Login
+      run: echo docker login --username=${{ vars.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Gen ASCII 
-      run: cowsay -f dragon "Run for Github" 
+    - name: Docker Publish 
+      run: docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+
+  deploy:
+    needs: docker
+    runs-on: ubuntu-latest
+    steps:
+    - name: Docker Run 
+      run: echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
