--- a/.github/workflows/first-example.yaml
+++ b/.github/workflows/first-example.yaml
@@ -1,6 +1,7 @@
 name: Exploring Secrets 
 
-on: push 
+on: 
+  workflow_dispatch:
 
 env:
   CONTAINER_REGISTRY: docker.io
@@ -24,4 +25,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Docker Run 
-      run: echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+      run: |
+        echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+        sleep 600s
