--- a/.github/workflows/second-example.yaml
+++ b/.github/workflows/second-example.yaml
@@ -13,6 +13,6 @@ jobs:
       run: sudo apt-get install nginx
 
     - name: curl nginx
-      run: curl localhost:80 
+      run: curl http://localhost:80/ 
 
 
