--- a/.github/workflows/matrix-example.yaml
+++ b/.github/workflows/matrix-example.yaml
@@ -10,11 +10,11 @@ jobs:
       matrix:
         os: [ubuntu-latest, ubuntu-20.04, windows-latest]
         images: [hello-world, alpine]
-    runs-on: ${{ .matrix.os }}
+    runs-on: ${{ matrix.os }}
 
   steps:
   - name: Echo Docker Info
     run: docker info 
   
-  - name: Run image on ${{ .matrix.os }}
-    run: docker run ${{ .matrix.images }}
+  - name: Run image on ${{ matrix.os }}
+    run: docker run ${{ matrix.images }}
