--- a/.github/workflows/matrix-example.yaml
+++ b/.github/workflows/matrix-example.yaml
@@ -7,11 +7,19 @@ on:
 jobs:
   deploy:
     strategy:
+      max-parallel: 2
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, ubuntu-20.04, windows-latest]
         images: [hello-world, alpine]
-    runs-on: ${{ matrix.os }}
+        exclude:
+        - image: alpine
+          os: windows-latest
+        include:
+        - image: amd64/alpine
+          os: ubuntu-20.04
 
+    runs-on: ${{ matrix.os }}
     steps:
     - name: Echo Docker Info
       run: docker info 
